--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
             "email": "seroukhov@gmail.com"
         },
         {
+            "name": "Volodymyr Tkachenko",
+            "email": "vovantigo@gmail.com"
+        },
+        {
             "name": "Mark Zontak",
             "email": "mark@zontak.me"
         }        
@@ -43,7 +47,7 @@
     "dependencies": {
         "lodash": "*",
         "async": "*",
-        "pip-services-commons-node": "^1.0.*"
+        "pip-services-commons-node": "*"
     },
     "devDependencies": {
         "@types/node": "*",
