--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "pip-services-data-node",
-    "version": "2.0.1",
-    "author": "Conceptual Vision Consulting LLC <www.conceptual.vision>",
+    "version": "2.0.2",
+    "author": "Conceptual Vision Consulting LLC",
     "description": "Data processing and persistence components for Pip.Services in Node.js",
     "contributors": [
         {
