Added build files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 /.idea
 *.map
 /obj/test/**/*
-/config/test_connections.json
-/config/test_connections.yaml
+/config/config.json
+/config/config.yml
 /data/dummies.json
